--- a/index.html
+++ b/index.html
@@ -60,48 +60,76 @@
             <h2>Restaurants</h2>
             <div class="restaurants__container">
                 <div class="restaurants">
-                    <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
-                        alt="Photo la pallette du goût" />
-                        <div class="new_topright">Nouveau</div>
+                    <div class="restaurants__container2">
+                        <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+                            alt="Photo la pallette du goût" />
+                            <div class="new_topright">Nouveau</div>
+                        </a>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
-                                <h3>La pallette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <a href="pages/la-pallette-du-gout.html">
+                                    <h3>La pallette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </a>
                             </div>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </div>
-                    </a>
-                    <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
-                        alt="Photo la note enchantée" />
-                        <div class="new_topright">Nouveau</div>
+                    </div>
+                    <div class="restaurants__container2">
+                        <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
+                            alt="Photo la note enchantée" />
+                            <div class="new_topright">Nouveau</div>
+                        </a>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
+                                <a href="pages/la-note-enchantee.html">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </a>
                             </div>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </div>
-                    </a>
-                    <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
-                        alt="Photo à la française" />
+                    </div>
+                    <div class="restaurants__container2">
+                        <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
+                            alt="Photo à la française" />
+                        </a>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
-                                <h3>À la française</h3>
-                                <p>Cité Rouge</p>
+                                <a href="pages/a-la-francaise.html">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </a>
                             </div>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </div>
-                    </a>
-                    <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
-                        alt="Photo Le délice des sens" />
+                    </div>
+                    <div class="restaurants__container2">
+                        <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
+                            alt="Photo Le délice des sens" />
+                        </a>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                                <a href="pages/le-delice-des-sens.html">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </a>
                             </div>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
