--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -39,31 +39,33 @@
                         <h2>Entrées</h2>
                         <div class="underline"></div>
                     </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                    <div class="container_animation">
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Fricassée d'escargot</h3>
+                                <p>Au piment d'Espelette</p>
+                            </div>
+                            <div class="block__price">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="block__price">
-                            <p>25€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Foie gras de canard mi-cuit</h3>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="block__price">
+                                <p>35€</p>
+                            </div>
                         </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div class="block__price">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
-                        </div>
-                        <div class="block__price">
-                            <p>20€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Oeuf au plat</h3>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="block__price">
+                                <p>20€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -72,31 +74,33 @@
                         <h2>Plats</h2>
                         <div class="underline"></div>
                     </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                    <div class="container_animation">
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Filet de boeuf aux herbes</h3>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="block__price">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="block__price">
-                            <p>40€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Parmentier de queue de boeuf</h3>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="block__price">
+                                <p>35€</p>
+                            </div>
                         </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
-                        </div>
-                        <div class="block__price">
-                            <p>35€</p>
-                        </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
-                        </div>
-                        <div class="block__price">
-                            <p>44€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Filet de turbot</h3>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="block__price">
+                                <p>44€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,31 +109,33 @@
                         <h2>Dessert</h2>
                         <div class="underline"></div>
                     </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                    <div class="container_animation">
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Paris-Brest</h3>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="block__price">
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="block__price">
-                            <p>18€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Macaron au chocolat d'exception </h3>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="block__price">
+                                <p>22€</p>
+                            </div>
                         </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Macaron au chocolat d'exception </h3>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div class="block__price">
-                            <p>22€</p>
-                        </div>
-                    </div>
-                    <div  class="block">
-                        <div class="block__menu_description">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
-                        </div>
-                        <div class="block__price">
-                            <p>23€</p>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Mousse au chocolat</h3>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="block__price">
+                                <p>23€</p>
+                            </div>
                         </div>
                     </div>
                 </div>
