--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -5,15 +5,15 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
 	    <link rel="stylesheet" href="../public/css/prefixed/restaurant.css" />
-        <title>Oh My Food - La pallette du goût</title>
-	    <meta name="description" content="La pallette du goût" />
+        <title>Oh My Food - La note enchantée</title>
+	    <meta name="description" content="La note enchantée" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <meta property="og:url" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/pages/la-pallette-du-gout.html" />
         <meta property="og:title" content="Oh My Food" />
-        <meta property="og:description" content="Menu du restaurant La palette du goût" />
-        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" />
+        <meta property="og:description" content="Menu du restaurant La note enchantée" />
+        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" />
     </head>
     <body>
         <div class="loader">
@@ -33,11 +33,11 @@
             </div>
         </header>
         <main>
-            <img  src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+            <img  src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
             alt="Photo la pallette du goût" />
             <section class="menu">
                 <div class="name">
-                    <h1>La pallette du goût</h1>
+                    <h1>La note enchantée</h1>
                     <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
@@ -51,8 +51,8 @@
                     <div class="container_animation">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Fricassée d'escargot</h3>
-                                <p>Au piment d'Espelette</p>
+                                <h3>Ravioles de foie gras</h3>
+                                <p>Accompagnés de leur crème à la truffe</p>
                             </div>
                             <div class="block__price">
                                 <p>25€</p>
@@ -65,8 +65,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Foie gras de canard mi-cuit</h3>
-                                <p>Et ses copeaux de truffe noire</p>
+                                <h3>Caviar osciètre</h3>
+                                <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="block__price">
                                 <p>35€</p>
@@ -79,11 +79,25 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Oeuf au plat</h3>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <h3>Homard et espuma de potiron</h3>
+                                <p>Mariné aux zestes d'orange</p>
                             </div>
                             <div class="block__price">
                                 <p>20€</p>
+                            </div>
+                            <div class="checkbox">
+                                <div class="checkbox__icon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block">
+                            <div class="block__menu_description">
+                                <h3>Foie gras de canard cuit entier</h3>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="block__price">
+                                <p>35€</p>
                             </div>
                             <div class="checkbox">
                                 <div class="checkbox__icon">
@@ -101,8 +115,8 @@
                     <div class="container_animation2">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Filet de boeuf aux herbes</h3>
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <h3>Noix de coquilles Saint-Jacques</h3>
+                                <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="block__price">
                                 <p>40€</p>
@@ -115,8 +129,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Parmentier de queue de boeuf</h3>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <h3>Langoustine poêlée</h3>
+                                <p>Purée de patate douce</p>
                             </div>
                             <div class="block__price">
                                 <p>35€</p>
@@ -129,8 +143,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Filet de turbot</h3>
-                                <p>Aux agrumes</p>
+                                <h3>Mijoté de queue de boeuf</h3>
+                                <p>Et riz sauvage aux zestes de citron</p>
                             </div>
                             <div class="block__price">
                                 <p>44€</p>
@@ -151,8 +165,8 @@
                     <div class="container_animation3">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Paris-Brest</h3>
-                                <p>Revisité</p>
+                                <h3>Macaron noisette et chocolat</h3>
+                                <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <div class="block__price">
                                 <p>18€</p>
@@ -165,8 +179,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Macaron au chocolat d'exception </h3>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <h3>Baba au rhum revisité</h3>
+                                <p>Avec son coulis de citron</p>
                             </div>
                             <div class="block__price">
                                 <p>22€</p>
@@ -179,8 +193,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Mousse au chocolat</h3>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <h3>Tarte au citron meringuée</h3>
+                                <p>Déstructurée</p>
                             </div>
                             <div class="block__price">
                                 <p>23€</p>
