--- a/pages/le-delice-des-sens.html
+++ b/pages/le-delice-des-sens.html
@@ -5,15 +5,15 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
 	    <link rel="stylesheet" href="../public/css/prefixed/restaurant.css" />
-        <title>Oh My Food - La pallette du goût</title>
-	    <meta name="description" content="La pallette du goût" />
+        <title>Oh My Food - Le délice des sens</title>
+	    <meta name="description" content="Le délice des sens" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <meta property="og:url" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/pages/la-pallette-du-gout.html" />
         <meta property="og:title" content="Oh My Food" />
-        <meta property="og:description" content="Menu du restaurant La palette du goût" />
-        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" />
+        <meta property="og:description" content="Menu du restaurant Le délice des sens" />
+        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" />
     </head>
     <body>
         <div class="loader">
@@ -33,11 +33,11 @@
             </div>
         </header>
         <main>
-            <img  src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+            <img  src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
             alt="Photo la pallette du goût" />
             <section class="menu">
                 <div class="name">
-                    <h1>La pallette du goût</h1>
+                    <h1>Le délice des sens</h1>
                     <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
@@ -51,8 +51,8 @@
                     <div class="container_animation">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Fricassée d'escargot</h3>
-                                <p>Au piment d'Espelette</p>
+                                <h3>Tartare de thon</h3>
+                                <p>Assaisonné au yuzu</p>
                             </div>
                             <div class="block__price">
                                 <p>25€</p>
@@ -65,8 +65,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Foie gras de canard mi-cuit</h3>
-                                <p>Et ses copeaux de truffe noire</p>
+                                <h3>Bouchée de homard croustillant</h3>
+                                <p>Et sa farandole de petits légumes</p>
                             </div>
                             <div class="block__price">
                                 <p>35€</p>
@@ -79,8 +79,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Oeuf au plat</h3>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <h3>Velouté de cèpes</h3>
+                                <p>Aux truffes</p>
                             </div>
                             <div class="block__price">
                                 <p>20€</p>
@@ -101,8 +101,8 @@
                     <div class="container_animation2">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Filet de boeuf aux herbes</h3>
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <h3>Poulet rôti aux herbes de Provence</h3>
+                                <p>Et sa crème de truffe</p>
                             </div>
                             <div class="block__price">
                                 <p>40€</p>
@@ -115,8 +115,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Parmentier de queue de boeuf</h3>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <h3>Langouste rôtie</h3>
+                                <p>Et ses légumes de saison</p>
                             </div>
                             <div class="block__price">
                                 <p>35€</p>
@@ -129,8 +129,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Filet de turbot</h3>
-                                <p>Aux agrumes</p>
+                                <h3>Côte de boeuf Angus</h3>
+                                <p>Et sa purée de panais</p>
                             </div>
                             <div class="block__price">
                                 <p>44€</p>
@@ -151,8 +151,8 @@
                     <div class="container_animation3">
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Paris-Brest</h3>
-                                <p>Revisité</p>
+                                <h3>Farandole de desserts</h3>
+                                <p>Du chef</p>
                             </div>
                             <div class="block__price">
                                 <p>18€</p>
@@ -165,8 +165,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Macaron au chocolat d'exception </h3>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <h3>Crème brulée</h3>
+                                <p>Revisitée</p>
                             </div>
                             <div class="block__price">
                                 <p>22€</p>
@@ -179,8 +179,8 @@
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
-                                <h3>Mousse au chocolat</h3>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <h3>Tiramisu</h3>
+                                <p>À la noisette</p>
                             </div>
                             <div class="block__price">
                                 <p>23€</p>
